Add Codex provider and interactive agent workflows